<resources>
    <!-- General -->
    <string name="Main_screen_phrase">La mejor aplicación para corredores y ciclistas</string>
    <string name="app_name">Stamina</string>
    <string name="title_home">Muro</string>
    <string name="title_home_like">Likes</string>
    <string name="title_home_comment">Comentarios</string>
    <string name="title_home_share">Share</string>
    <string name="title_users">Users</string>
    <string name="title_record">Registrar</string>
    <string name="title_profile">Perfil</string>
    <string name="title_edit_profile">Editar perfil</string>

    <!-- Agreements -->
    <string name="User_agreement_title">(EULA) Acuerdo de Usuario</string>
    <string name="User_agreement_content">End-User License Agreement (EULA) of Stamina
This End-User License Agreement ("EULA") is a legal agreement between you and Stamina Training Limited. Our EULA was created by EULA Template for Stamina.

This EULA agreement governs your acquisition and use of our Stamina software ("Software") directly from Stamina Training Limited or indirectly through a Stamina Training Limited authorized reseller or distributor (a "Reseller").

Please read this EULA agreement carefully before completing the installation process and using the Stamina software. It provides a license to use the Stamina software and contains warranty information and liability disclaimers.

If you register for a free trial of the Stamina software, this EULA agreement will also govern that trial. By clicking "accept" or installing and/or using the Stamina software, you are confirming your acceptance of the Software and agreeing to become bound by the terms of this EULA agreement.

If you are entering into this EULA agreement on behalf of a company or other legal entity, you represent that you have the authority to bind such entity and its affiliates to these terms and conditions. If you do not have such authority or if you do not agree with the terms and conditions of this EULA agreement, do not install or use the Software, and you must not accept this EULA agreement.

This EULA agreement shall apply only to the Software supplied by Stamina Training Limited herewith regardless of whether other software is referred to or described herein. The terms also apply to any Stamina Training Limited updates, supplements, Internet-based services, and support services for the Software, unless other terms accompany those items on delivery. If so, those terms apply.

License Grant
Stamina Training Limited hereby grants you a personal, non-transferable, non-exclusive licence to use the Stamina software on your devices in accordance with the terms of this EULA agreement.

You are permitted to load the Stamina software (for example a PC, laptop, mobile or tablet) under your control. You are responsible for ensuring your device meets the minimum requirements of the Stamina software.

You are not permitted to:

Edit, alter, modify, adapt, translate or otherwise change the whole or any part of the Software nor permit the whole or any part of the Software to be combined with or become incorporated in any other software, nor decompile, disassemble or reverse engineer the Software or attempt to do any such things
Reproduce, copy, distribute, resell or otherwise use the Software for any commercial purpose
Allow any third party to use the Software on behalf of or for the benefit of any third party
Use the Software in any way which breaches any applicable local, national or international law
use the Software for any purpose that Stamina Training Limited considers is a breach of this EULA agreement
Intellectual Property and Ownership
Stamina Training Limited shall at all times retain ownership of the Software as originally downloaded by you and all subsequent downloads of the Software by you. The Software (and the copyright, and other intellectual property rights of whatever nature in the Software, including any modifications made thereto) are and shall remain the property of Stamina Training Limited.

Stamina Training Limited reserves the right to grant licences to use the Software to third parties.

Termination
This EULA agreement is effective from the date you first use the Software and shall continue until terminated. You may terminate it at any time upon written notice to Stamina Training Limited.

It will also terminate immediately if you fail to comply with any term of this EULA agreement. Upon such termination, the licenses granted by this EULA agreement will immediately terminate and you agree to stop all access and use of the Software. The provisions that by their nature continue and survive will survive any termination of this EULA agreement.

Governing Law
This EULA agreement, and any dispute arising out of or in connection with this EULA agreement, shall be governed by and construed in accordance with the laws of es.</string>

    <!-- Location/Actividad -->
    <string name="Current_location">Tu ubicación.</string>
    <string name="Start_location">Inicio</string>
    <string name="End_location">Fin</string>
    <string name="Route_in_progress">Ruta en progreso...</string>
    <string name="No_location_services">Sin servicios de localizacion.</string>
    <string name="Location_services_needed_title">Se necesitan los servicios de localización.</string>
    <string name="Location_services_needed_text">La aplicación necesita los servicios de localización. Por favor, acepte para poder usar esta funcionalidad.</string>

    <!-- Authentication -->
    <string name="Google_log_in_screen_email_hint">Introduzca el email</string>
    <string name="Google_log_in_screen_password_hint">Introduzca su contraseña</string>
    <string name="Google_log_in_screen_log_in">Iniciar sesión</string>
    <string name="Main_screen_login_button">Iniciar sesión con Google</string>
    <string name="Log_out">Cerrar Sesión</string>

    <!-- Actions -->
    <string name="ver">ver</string>
    <string name="start">iniciar</string>
    <string name="stop">detener</string>
    <string name="resume">reanudar</string>
    <string name="finish">terminar</string>
    <string name="discard">descartar</string>
    <string name="save">guardar</string>
    <string name="rating">clasificación</string>
    <string name="Accept">Aceptar</string>
    <string name="Cancel">Cancelar</string>

    <!-- Tags -->
    <string name="profile">Perfil</string>
    <string name="activities">Actividades</string>
    <string name="distance">Distancia</string>
    <string name="pace">Ritmo</string>
    <string name="time">Tiempo</string>
    <string name="profilePicture">Imagen de perfil</string>
    <string name="duration">Duración</string>
    <string name="speed">Velocidad</string>
    <string name="walk">caminata</string>
    <string name="running">running</string>
    <string name="cycling">ciclismo</string>
    <string name="title_activity_prueba">Prueba</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- URL de Firebase -->
    <string name="datasource_firebase">https://stamina-training-default-rtdb.europe-west1.firebasedatabase.app/</string>

    <!-- Room DB -->
    <string name="coordenadas_database">coordenadas_database</string>

    <!-- Editar perfil -->
    <string name="nuevo_nombre">Introduzca el nuevo nombre</string>
    <string name="nueva_descripcion">Introduzca la nueva descripcion</string>
    <string name="sincronizar_foto_gmail">Sincronizar foto Gmail</string>
    <string name="sincronizar_foto_gmail_exito">Foto sincronizada</string>
    <string name="campos_vacios">Campos vacios</string>
    <string name="nombre_actualizado">Nombre actualizado</string>
    <string name="descripcion_actualizada">Descripcion actualizada</string>

    <!-- Comentarios -->
    <string name="hint_comentario">Introduzca un comentario</string>

    <!-- Seguir y dejar de seguir -->
    <string name="seguir">Seguir</string>
    <string name="dejarDeSeguir">Dejar de seguir</string>
    <string name="usuarioSeguidoCorrectamente">Se ha seguido al usuario</string>
    <string name="usuarioDejadoDeSeguirCorrectamente">Se ha dejado de seguir al usuario</string>

    <!-- Compartir resumen de actividad -->
    <string name="introResumenActividad">¡He realizado una actividad utilizando Stamina!</string>
    <string name="distancia">He recorrido</string>
    <string name="unidad_distancia">kilómetros</string>
    <string name="ritmo">a un ritmo de</string>
    <string name="unidad_ritmo">kilómetros minuto</string>
    <string name="tiempo">en un tiempo de</string>

</resources>