<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home_like"
        android:name="com.limited.training.stamina.ui.home.HomeLikeFragment"
        android:label="@string/title_home_like"
        tools:layout="@layout/fragment_home_like">
        <action
            android:id="@+id/action_navigation_home_like_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.limited.training.stamina.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_home_like"
            app:destination="@id/navigation_home_like" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_home_comment"
            app:destination="@id/navigation_home_comment" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_home_share"
            app:destination="@id/navigation_home_share" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home_share"
        android:name="com.limited.training.stamina.ui.home.HomeShareFragment"
        android:label="@string/title_home_share"
        tools:layout="@layout/fragment_home_share">
        <action
            android:id="@+id/action_navigation_home_share_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home_comment"
        android:name="com.limited.training.stamina.ui.home.HomeCommentFragment"
        android:label="@string/title_home_comment"
        tools:layout="@layout/fragment_home_comment">
        <action
            android:id="@+id/action_navigation_home_comment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_record"
        android:name="com.limited.training.stamina.ui.record.RecordFragment"
        android:label="@string/title_record"
        tools:layout="@layout/fragment_record" />

    <fragment
        android:id="@+id/navigation_routes"
        android:name="com.limited.training.stamina.ui.routes.RoutesFragment"
        android:label="@string/title_routes"
        tools:layout="@layout/fragment_routes" >
        <action
            android:id="@+id/action_navigation_routes_to_navigation_concrete_routes"
            app:destination="@id/navigation_concrete_routes" />
    </fragment>

    <fragment
        android:id="@+id/navigation_concrete_routes"
        android:name="com.limited.training.stamina.ui.routes.ConcreteRoutesFragment"
        android:label="@string/title_routes"
        tools:layout="@layout/fragment_route_concrete" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.limited.training.stamina.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_profile_activities"
            app:destination="@id/navigation_profile_activities" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile_activities"
        android:name="com.limited.training.stamina.ui.profile.ProfileActivities"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile_activities" >
        <action
            android:id="@+id/action_navigation_profile_activities_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>
</navigation>