<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/mock_map_route"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/white_background_tv"
        android:layout_width="409dp"
        android:layout_height="728dp"
        android:alpha="0.85"
        android:background="@color/white"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/duration_time_tv"
        android:layout_width="131dp"
        android:layout_height="39dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="88dp"
        android:textSize="8pt"
        android:text="00:46:15"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/duration_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/distance_km_tv"
        android:layout_width="131dp"
        android:layout_height="39dp"
        android:textSize="8pt"
        android:text="9.450 Km"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/distance_tv"
        app:layout_constraintTop_toBottomOf="@+id/duration_time_tv" />

    <TextView
        android:id="@+id/distance_tv"
        android:layout_width="131dp"
        android:layout_height="39dp"
        android:layout_margin="10dp"
        android:textSize="8pt"
        android:text="@string/distance"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="295dp" />

    <TextView
        android:id="@+id/speed_tv"
        android:layout_width="131dp"
        android:layout_height="39dp"
        android:layout_margin="10dp"
        android:text="@string/speed"
        android:textSize="8pt"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="333dp" />

    <TextView
        android:id="@+id/duration_tv"
        android:layout_width="131dp"
        android:layout_height="39dp"
        android:layout_margin="10dp"
        android:textSize="8pt"
        android:text="@string/duration"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="256dp" />

    <TextView
        android:id="@+id/speed_kmh_tv"
        android:layout_width="131dp"
        android:layout_height="39dp"
        android:textSize="8pt"
        android:text="11.2 Km/h"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/speed_tv"
        app:layout_constraintTop_toBottomOf="@+id/distance_km_tv" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/style_start_button"
        android:text="@string/stop"
        android:textSize="8pt"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/rating_btn"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:background="@drawable/style_rating_button"
        android:text="@string/resume"
        android:textColor="@color/black"
        android:textSize="8pt"
        android:typeface="monospace"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/start_btn"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/azul_stamina"
        app:strokeWidth="9dip"
        tools:layout_editor_absoluteY="622dp" />

</androidx.constraintlayout.widget.ConstraintLayout>